<resources>
    <string name="app_name">Fusy</string>
    <string name="hint_password">Password</string>
    <string name="hint_login">Login</string>
    <string name="api_connection">Login</string>
    <string name="account_title">Account</string>
    <string name="undefined_number">#</string>
    <string name="fiction_title">Fiction title</string>
    <string name="fiction_miniature_missing">Fiction miniature missing</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>
    <!-- Strings related to search -->
    <string name="search_title">Search results</string>
    <string name="search_hint">Search fictions</string>
    <string name="search_empty">No search results</string>
    <!-- Strings related to fictionDetail detail -->
    <string name="fiction_unknown">Unknown</string>
    <string name="fiction_detail_by">by</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="bookshelf_defaultCategory">Default</string>
    <string name="bookshelf_emptyCategory">No fictions in this category</string>
    <string name="bookshelf_empty">No fictions in the bookshelf!</string>
    <string name="drive_account_sync">Sync with Google Drive</string>
    <string name="fictionDetail_addLibrary">Add to Library</string>
    <string name="fictionDetail_read">Read</string>
    <string name="fusy_image_view">Fusy Logo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="local_account">Local Account</string>
    <string name="menu_read">Read</string>
    <string name="menu_bookshelf">Bookshelf</string>
    <string name="menu_search">Search</string>
    <string name="search_tags_empty">No tags available</string>
    <string name="fiction_add_library_category">Choose category</string>
</resources>
