<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FictionDetailFragment">

    <TextView
        android:id="@+id/textView_fictionName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:text="@string/fiction_unknown"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/textView_fictionBy"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_fictionBy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fiction_detail_by"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/textView_fictionName" />

    <TextView
        android:id="@+id/textView_fictionAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fiction_unknown"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/textView_fictionBy" />

    <ImageView
        android:id="@+id/imageView_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_large"
        android:adjustViewBounds="true"
        android:contentDescription="@string/fiction_miniature_missing"
        android:maxWidth="200dp"
        android:maxHeight="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_fictionAuthor"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView_fictionDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello_blank_fragment"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintTop_toBottomOf="@+id/imageView_image" />

</androidx.constraintlayout.widget.ConstraintLayout>